extend user login + create
