# swagger.yaml
@@ -406,7 +406,45 @@ paths:
         500:  
           description: Internal Server Error
       security:
-        - vice_auth: []        
+        - vice_auth: []
+
+  /user:
+    get:
+      summary: Provide user information about logged in user
+      operationId: getUser
+      responses:
+        200:
+          description: successful operation
+          schema:        
+            $ref: "#/definitions/User"
+        401:
+          $ref: "#/responses/UnauthorizedError"
+        500:  
+          description: Internal Server Error
+      security:
+        - vice_auth: []
+    post:
+      summary: Create a new user in the system
+      operationId: createUser
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      consumes:
+        - application/json
+        - application/xml      
+      responses:
+        200:
+          description: successful operation
+          schema:        
+            $ref: "#/definitions/User"
+        401:
+          $ref: "#/responses/UnauthorizedError"
+        500:  
+          description: Internal Server Error
+
 
 securityDefinitions:
   vice_auth:
@@ -464,6 +502,10 @@ definitions:
       username:
         type: string
       password:
+        type: string
+      email:
+        type: string
+      fullname:
         type: string
 
   Image:
